--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Sourav Dey">Sourav Dey</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Fullstack Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -208,19 +208,16 @@
         </header>
 
         <section class="about-text">
-          <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
-
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
-          </p>
+          <p>  
+            I'm an Android Lead and Full-Stack Developer with expertise in building high-performance, crash-free mobile applications.  
+            I specialize in Jetpack Compose, multi-module architecture, and modern Android development practices.  
+          </p>  
+          
+          <p>  
+            My role involves optimizing development workflows, solving critical bugs, and ensuring seamless feature delivery.  
+            Moreover, I contribute to CI/CD automation, API development, and team efficiency improvements.  
+            My goal is to create intuitive user experiences while mentoring teams to deliver high-quality software.  
+          </p>          
         </section>
 
 
